--- a/src/Makefile.test.include
+++ b/src/Makefile.test.include
@@ -66,78 +66,16 @@ RAW_TEST_FILES = test/data/alertTests.raw
 
 GENERATED_TEST_FILES = $(JSON_TEST_FILES:.json=.json.h) $(RAW_TEST_FILES:.raw=.raw.h)
 
+  # test/crypto_tests.cpp
+
 BITCOIN_TESTS =\
-  test/arith_uint256_tests.cpp \
   test/scriptnum10.h \
-  test/addrman_tests.cpp \
-  test/alert_tests.cpp \
-  test/amount_tests.cpp \
-  test/allocator_tests.cpp \
-  test/base32_tests.cpp \
-  test/base58_tests.cpp \
-  test/base64_tests.cpp \
-  test/bip32_tests.cpp \
-  test/bip39_tests.cpp \
-  test/blockencodings_tests.cpp \
-  test/bloom_tests.cpp \
-  test/bswap_tests.cpp \
-  test/checkqueue_tests.cpp \
-  test/cachemap_tests.cpp \
-  test/cachemultimap_tests.cpp \
-  test/coins_tests.cpp \
-  test/compress_tests.cpp \
-  test/crypto_tests.cpp \
-  test/cuckoocache_tests.cpp \
-  test/DoS_tests.cpp \
-  test/evo_deterministicmns_tests.cpp \
-  test/evo_simplifiedmns_tests.cpp \
-  test/getarg_tests.cpp \
-  test/governance_validators_tests.cpp \
-  test/hash_tests.cpp \
-  test/key_tests.cpp \
-  test/limitedmap_tests.cpp \
-  test/dbwrapper_tests.cpp \
-  test/main_tests.cpp \
-  test/mempool_tests.cpp \
-  test/merkle_tests.cpp \
-  test/miner_tests.cpp \
   test/mnp_tests.cpp \
-  test/multisig_tests.cpp \
-  test/net_tests.cpp \
-  test/netbase_tests.cpp \
-  test/pmt_tests.cpp \
-  test/policyestimator_tests.cpp \
-  test/pow_tests.cpp \
-  test/prevector_tests.cpp \
-  test/raii_event_tests.cpp \
-  test/ratecheck_tests.cpp \
-  test/reverselock_tests.cpp \
-  test/rpc_tests.cpp \
-  test/sanity_tests.cpp \
-  test/scheduler_tests.cpp \
-  test/script_P2SH_tests.cpp \
-  test/script_P2PK_tests.cpp \
-  test/script_P2PKH_tests.cpp \
-  test/script_tests.cpp \
-  test/scriptnum_tests.cpp \
-  test/serialize_tests.cpp \
-  test/sighash_tests.cpp \
-  test/sigopcount_tests.cpp \
-  test/skiplist_tests.cpp \
-  test/streams_tests.cpp \
-  test/subsidy_tests.cpp \
   test/test_dash.cpp \
   test/test_dash.h \
   test/test_random.h \
   test/testutil.cpp \
-  test/testutil.h \
-  test/timedata_tests.cpp \
-  test/transaction_tests.cpp \
-  test/txvalidationcache_tests.cpp \
-  test/versionbits_tests.cpp \
-  test/uint256_tests.cpp \
-  test/univalue_tests.cpp \
-  test/util_tests.cpp
+  test/testutil.h
 
 if ENABLE_WALLET
 BITCOIN_TESTS += \
